--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,9 +5,10 @@ description = ""
 authors = ["Naveen Anil <naveen.anil@wind-pioneers.com>"]
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = ">=3.9,<3.13"
 
 [tool.poetry.dev-dependencies]
+pyinstaller = "^5.13.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
