DEP: Add pre-commit

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "pipeliner"
+name = "geo-suite"
 version = "0.1.0"
 description = ""
 authors = ["Naveen Anil <naveenms01@gmail.com>"]
@@ -7,7 +7,8 @@ authors = ["Naveen Anil <naveenms01@gmail.com>"]
 [tool.poetry.dependencies]
 python = ">=3.9,<3.13"
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
+pre-commit = "^3.4.0"
 pyinstaller = "^5.13.0"
 
 [build-system]
