--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -52,6 +52,7 @@ repos:
     rev: 6.0.0
     hooks:
       - id: flake8
+        args: ["--max-line-length", "120"]
         language_version: python3
 
   - repo: https://github.com/pre-commit/mirrors-prettier
